[package]
name = "anitomy"
version = "0.1.0"
description = "Wrapper for Anitomy, the library for parsing anime video filenames"
keywords = ["anitomy", "anime", "filenames", "parsing"]
authors = ["Thomas Farr <xtansia@xtansia.com>"]
license = "MPL-2.0"
homepage = "https://github.com/Xtansia/anitomy-rs"
repository = "https://github.com/Xtansia/anitomy-rs"

[dependencies]
anitomy-sys = { path = "anitomy-sys", version = "0.1" }

[workspace]