[package]
name = "anitomy-sys"
version = "0.1.0"
description = "Bindings for Anitomy, the library for parsing anime video filenames"
keywords = ["anitomy", "anime", "filenames", "parsing", "bindings"]
authors = ["Thomas Farr <xtansia@xtansia.com>"]
license = "MPL-2.0"
homepage = "https://github.com/Xtansia/anitomy-rs"
repository = "https://github.com/Xtansia/anitomy-rs"

build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
