[package]
name = "anitomy-sys"
version = "0.1.1"
description = "Bindings for Anitomy, the library for parsing anime video filenames"
keywords = ["anitomy", "anime", "filenames", "parsing", "bindings"]
categories = ["external-ffi-bindings", "parsing"]
readme = "README.md"
authors = ["Thomas Farr <xtansia@xtansia.com>"]
license = "MPL-2.0"
homepage = "https://github.com/Xtansia/rust-anitomy"
repository = "https://github.com/Xtansia/rust-anitomy"

build = "build.rs"

[build-dependencies]
cc = "1.0"

[dependencies]
